update css to stop overflow

--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@
 html {
   font-size: 100%;
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 *,
@@ -30,7 +31,7 @@ html {
 }
 
 body {
-  font-family: "Public Sans", sans-serif;
+  font-family: 'Public Sans', sans-serif;
   font-weight: 300;
   font-size: 1.125rem;
   line-height: 1.3;
@@ -111,7 +112,7 @@ header nav {
 
 .menu__icon::before,
 .menu__icon::after {
-  content: "";
+  content: '';
   position: absolute;
   border-radius: 3px;
   width: inherit;
@@ -228,24 +229,25 @@ header nav {
 
 .hero {
   background-color: var(--Very-Light-Gray);
+  overflow: hidden;
 }
 
 .hero-img {
   position: relative;
-  background: url("../img/bg-intro-mobile.svg") no-repeat center / cover;
+  background: url('../img/bg-intro-mobile.svg') no-repeat center / cover;
   min-height: 17.5rem;
 }
 
 .hero-img::before,
 .hero-img::after {
-  content: "";
+  content: '';
   position: absolute;
   width: 100%;
   height: 100%;
 }
 
 .hero-img::before {
-  background: url("../img/image-mockups.png") no-repeat center bottom;
+  background: url('../img/image-mockups.png') no-repeat center bottom;
   background-size: 86%;
 }
 
@@ -377,7 +379,6 @@ footer {
   font-size: 15px;
 }
 
-
 .footer-left a {
   color: var(--Light-Grayish-Blue);
 }
@@ -416,6 +417,6 @@ footer {
 }
 
 .social-media img:hover {
-  filter: invert(64%) sepia(59%) saturate(563%) hue-rotate(83deg)
-    brightness(160%) contrast(90%);
+  filter: invert(64%) sepia(59%) saturate(563%) hue-rotate(83deg) brightness(160%)
+    contrast(90%);
 }
